# GRS3WDC

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
archive/data/: breast_s.csv  digits.csv  glass_o.csv  shuttle.csv  yeast.csv
archive/data/visulization/: banknote.csv  banknote.eps  banknote_res.csv  breast.csv  breast.eps  breast_res.csv  glass.csv  glass.eps  image.csv  image.eps  image_res.csv  letter.csv  letter.eps  letter_res.csv  phishing.csv  phishing.eps  phishing_res.csv  sonar.csv  sonar.eps  sonar_res.csv
archive/kt_tuner_dir/fcnn_tuning/: oracle.json
archive/kt_tuner_dir/fcnn_tuning/trial_00/: checkpoint.weights.h5  trial.json
archive/kt_tuner_dir/fcnn_tuning/trial_01/: checkpoint.weights.h5  trial.json
archive/kt_tuner_dir/fcnn_tuning/trial_02/: checkpoint.weights.h5  trial.json
archive/legacy_modules/: twdmaximal.py  twdmp.py  twdmpchev.py  twdneighborhood.py  twdnp.py  twdnpchev.py
archive/notebooks/: baseline-dl.ipynb  baseline.ipynb  hypertunning-Copy1.ipynb  hypertunning.ipynb  initial.ipynb  knntwdnp.ipynb  reduced_neighborhood.ipynb  test.ipynb  test_quan.ipynb  validate_maximal.ipynb  validate_neighborhood.ipynb  visulization_Untitled.ipynb
configs/: experiments.yaml
data/: banknote.csv  image.csv  letter.csv  sonar.csv
experiments/: _common.py  generate_figures.py  hyperparameter_search.py  run_all.py  run_experiment.py
src/grs3wdc/: __init__.py  baselines.py  data.py  distances.py  evaluation.py
src/grs3wdc/granules/: maximal_clique.py  neighborhood.py
tests/: test_smoke.py
(+14 files in other folders)
