[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grs3wdc"
version = "0.1.0"
description = "Granular Rough Sets Three-Way Decision Classifier (Luo, Hu, Shi, Yao; Applied Soft Computing 180, 2025)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "networkx",
    "joblib",
    "matplotlib",
    "seaborn",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
